<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

  <Button
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginTop="16dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.539"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.886" />

  <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/prompt_password"
      android:imeActionLabel="@string/action_sign_in_short"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sender_email" />

  <EditText
      android:id="@+id/sender_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="76dp"
      android:hint="@string/prompt_email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description_text" />

  <EditText
      android:id="@+id/forward_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:hint="@string/forward_email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <TextView
      android:id="@+id/app_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@color/teal_200"
      android:rotation="-4"
      android:text="@string/app_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/description_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:editable="false"
      android:ems="10"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      android:text="@string/app_description"
      app:layout_constraintTop_toBottomOf="@+id/app_logo"
      tools:layout_editor_absoluteX="16dp" />

  <TextView
      android:id="@+id/warning_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:text="@string/app_warning"
      android:textColor="#D81B60"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/forward_email" />


</androidx.constraintlayout.widget.ConstraintLayout>